<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.zhaogaofei.firsttestapp.MainActivity">

    <TextView
        android:id="@+id/tv_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <EditText
        android:id="@+id/et_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="click"/>

    <Button
        android:id="@+id/bt_get_package_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="get package"/>

    <TextView
        android:id="@+id/text_package"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
